(include_subdirs unqualified)

(library
 (name lib)
 (public_name mica)
 (libraries
  base_quickcheck
  base
  core
  stdio
  angstrom
  core_unix
  pprint
  core_unix.command_unix
  core_bench
  re
  ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

(documentation
 (package mica))
