; Define and build the `pp.ml` executable (used for testing preprocessor)

(rule
 (targets pp.ml)
 (action
  (write-file %{targets} "let () = Ppxlib.Driver.standalone ()")))

(executable
 (name pp)
 (modules pp)
 (libraries ppx_template ppxlib))

(include dune.inc)

; Generate the dune rules for the `passing` directory using `gen_dune_rules`

(rule
 (targets dune.inc.gen)
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   %{targets}
   (run ../gen_dune_rules.exe -kind passing))))

; Promotes `dune.inc.gen` to `dune.inc` when running `dune runtest --auto-promote`

(rule
 (alias runtest)
 (package ppx_template)
 (action
  (diff dune.inc dune.inc.gen)))
